--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angular2-uuid": "^1.1.1",
     "jqwidgets-ng": "^8.1.4",
     "ng-zorro-antd": "^8.1.2",
     "rxjs": "~6.4.0",
