基础流程图组件

--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               "src/styles.less",
               "node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.base.css",
               "node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.dark.css",
+              "node_modules/jointjs/css/layout.css",
               "src/theme.less",
               "src/help.less",
               "src/query.less"
