--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "angular2-uuid": "^1.1.1",
+    "css-element-queries": "^1.2.1",
+    "jointjs": "^3.0.4",
     "jqwidgets-ng": "^8.1.4",
     "ng-zorro-antd": "^8.1.2",
     "rxjs": "~6.4.0",
