--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.0",
     "angular2-uuid": "^1.1.1",
     "css-element-queries": "^1.2.1",
+    "dhtmlx-gantt": "^6.2.3",
     "jointjs": "^3.0.4",
     "jqwidgets-ng": "^8.1.4",
     "ng-zorro-antd": "^8.1.2",
