--- a/angular.json
+++ b/angular.json
@@ -36,12 +36,16 @@
               "src/styles.less",
               "node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.base.css",
               "node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.dark.css",
-              "node_modules/jointjs/css/layout.css",
               "src/theme.less",
               "src/help.less",
               "src/query.less"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jquery.js",
+              "src/assets/js/lodash.js",
+              "src/assets/js/backbone.js",
+              "src/assets/js/joint.min.js"
+            ]
           },
           "configurations": {
             "production": {
